syntax = "proto3";
package addresses.v1;

option go_package = "github.com/peggyjv/sommelier/v8/x/addresses/types";

message AddressMapping {
    string cosmos_address = 1;
    string evm_address = 2;
}

